Edit Profile Page Liste Düzenleme ve SwipeDelete(Liste öğesi sağa kaydırıldıgında ) İşlemleri + kod içi düzenlemeler.

--- a/app/src/main/res/layout/edit_profil_content.xml
+++ b/app/src/main/res/layout/edit_profil_content.xml
@@ -1,478 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
+    <include
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="10">
+    layout="@layout/snippet_cardgenelbilgi">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.2">
+    </include>
 
-                <View
-                    android:layout_width="3dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/primary">
+    <include layout="@layout/snippet_card_about">
 
+    </include>
 
-                </View>
-            </LinearLayout>
+    <include layout="@layout/snippet_card_deneyim">
 
+    </include>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="vertical">
+    <include layout="@layout/snippet_card_egitim">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+    </include>
 
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="2dp"
-                        android:layout_marginTop="2dp"
-                        android:onClick="addGenel"
-                        android:src="@drawable/ic_add_black_24dp"
-                        android:tint="@color/black" />
+    <include layout="@layout/snippet_card_yetenek"> </include>
 
-                    <TextView
-                        android:id="@+id/genelBilgiTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="12dp"
-                        android:text="Genel bilgiler"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="20sp"
-                        android:textStyle="bold|italic" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_alignBottom="@id/genelBilgiTitle"
-
-                        android:background="@color/primary">
-
-                    </View>
-
-
-                </RelativeLayout>
-
-                <include layout="@layout/genelbilgicontent"></include>
-
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="10">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.2">
-
-                <View
-                    android:layout_width="3dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/MediumVioletRed">
-
-
-                </View>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:onClick="editAbout"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="2dp"
-                        android:layout_marginTop="2dp"
-                        android:src="@drawable/ic_add_black_24dp"
-                        android:tint="@color/black" />
-
-                    <TextView
-                        android:id="@+id/hkkmdaTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="12dp"
-                        android:text="Hakkımda"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="20sp"
-                        android:textStyle="bold|italic" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_alignBottom="@id/hkkmdaTitle"
-
-                        android:background="@color/MediumVioletRed">
-
-                    </View>
-                </RelativeLayout>
-
-
-                <TextView
-                    android:id="@+id/editAbout_content"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="5dp"
-                    android:hint="Sen Kimsin? "
-                    android:lineSpacingExtra="4dp"
-                    android:textColor="@color/black"
-                    android:textSize="17sp" />
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="10">
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.2">
-
-                <View
-                    android:layout_width="3dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/green">
-
-
-                </View>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-
-                    <ImageView
-                        android:id="@+id/addDeneyim"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="2dp"
-                        android:layout_marginTop="2dp"
-                        android:clickable="true"
-                        android:elevation="3dp"
-                        android:focusable="true"
-                        android:onClick="addDeneyim"
-                        android:src="@drawable/ic_add_black_24dp"
-                        android:tint="@color/black" />
-
-                    <TextView
-                        android:id="@+id/deneyimTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:padding="12dp"
-                        android:text="Deneyimlerim"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="20sp"
-                        android:textStyle="bold|italic" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_alignBottom="@id/deneyimTitle"
-
-                        android:background="@color/green" />
-
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/empty_message"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="Hiç Deneyim Eklenmemiş"
-                    android:visibility="visible" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/deneyimList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp">
-
-
-                </android.support.v7.widget.RecyclerView>
-
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="10">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.2">
-
-                <View
-                    android:layout_width="3dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/blue">
-
-
-                </View>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-
-                    <ImageView
-                        android:id="@+id/editEgitim_id"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-
-                        android:layout_marginEnd="2dp"
-                        android:layout_marginTop="2dp"
-                        android:onClick="editEgitim"
-                        android:src="@drawable/ic_add_black_24dp"
-                        android:tint="@color/black" />
-
-                    <TextView
-                        android:id="@+id/egitimTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="12dp"
-                        android:text="Eğitim"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="20sp"
-                        android:textStyle="bold|italic" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_alignBottom="@id/egitimTitle"
-
-                        android:background="@color/blue" />
-
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/empty_message1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="Hiç Eğitim Eklenmemiş"
-                    android:visibility="visible" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/egitimList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp">
-
-
-                </android.support.v7.widget.RecyclerView>
-
-
-            </LinearLayout>
-        </LinearLayout>
-
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="10">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.2">
-
-                <View
-                    android:layout_width="3dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/SlateBlue">
-
-
-                </View>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="2dp"
-                        android:layout_marginTop="2dp"
-                        android:onClick="addYetenek"
-                        android:src="@drawable/ic_add_black_24dp"
-                        android:tint="@color/black" />
-
-                    <TextView
-                        android:id="@+id/yetenekTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="12dp"
-                        android:text="Yetenekler"
-                        android:textColor="@color/cardview_dark_background"
-                        android:textSize="20sp"
-                        android:textStyle="bold|italic" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_alignBottom="@id/yetenekTitle"
-
-                        android:background="@color/DarkSlateBlue" />
-
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/empty_message2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="Hiç Yetenek Eklenmemiş"
-                    android:visibility="visible" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/yetenekList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp">
-
-
-                </android.support.v7.widget.RecyclerView>
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-    </android.support.v7.widget.CardView>
 </LinearLayout>
