--- a/app/src/main/res/layout/deneyimlist_row.xml
+++ b/app/src/main/res/layout/deneyimlist_row.xml
@@ -1,91 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/eklenecekDeneyimList"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:background="@drawable/roundedbutton2"
-    android:orientation="horizontal"
-    android:paddingBottom="10dp"
-    android:paddingEnd="6dp"
-    android:paddingStart="10dp"
-    android:paddingTop="10dp">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/ayText"
-        android:layout_width="25dp"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:text="2ay"
-        android:textColor="@color/Peru"
-        android:textSize="15dp">
 
-    </TextView>
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="10dp"
-        android:layout_height="70dp"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/ayText"
-        android:background="@drawable/line"
-        android:backgroundTint="@color/green"
-
-        />
-
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/deneyimBackground"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/view"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:background="@color/LimeGreen">
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/delete_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/ic_delete_sweep_black_24dp"
+            android:tint="@color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/delete_icon"
+            android:text="Delete"
+            android:textColor="#fff"
+            android:textSize="13dp" />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/deneyimview_foreground"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
+        android:paddingEnd="6dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp">
+
+        <TextView
+            android:id="@+id/ayText"
+            android:layout_width="25dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="2ay"
+            android:textColor="@color/Peru"
+            android:textSize="15dp">
+
+        </TextView>
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="10dp"
+            android:layout_height="70dp"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/ayText"
+            android:background="@drawable/line"
+            android:backgroundTint="@color/green"
+
+            />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/view"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tvPozisyon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="Android Developer"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="@color/black"
+                    android:textSize="15dp" />
+
+                <ImageView
+                    android:id="@+id/editDeneyimListRow"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/pencil"
+
+                    />
+
+            </RelativeLayout>
 
             <TextView
-                android:id="@+id/tvPozisyon"
-                android:layout_width="wrap_content"
+                android:id="@+id/tvKurum"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="Android Developer"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="@color/black"
-                android:textSize="15dp" />
-
-            <ImageView
-                android:id="@+id/editDeneyimListRow"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/pencil"
-
-                />
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/tvKurum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:textSize="14dp"
-            android:text="OptiiM" />
+                android:layout_marginStart="10dp"
+                android:text="OptiiM"
+                android:textSize="14dp" />
 
 
-        <TextView
-            android:id="@+id/tvLokasyon"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="2dp"
-            android:text="İstanbul"
-            android:textSize="12dp"
-            android:textStyle="italic" />
+            <TextView
+                android:id="@+id/tvLokasyon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="2dp"
+                android:text="İstanbul"
+                android:textSize="12dp"
+                android:textStyle="italic" />
 
 
-    </LinearLayout>
+        </LinearLayout>
 
 
-</RelativeLayout>
+    </RelativeLayout>
 
+
+</FrameLayout>
