--- a/app/src/main/res/layout/gridview_imagelist_row.xml
+++ b/app/src/main/res/layout/gridview_imagelist_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -14,11 +15,16 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop" />
 
-    <ProgressBar
+
+    <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/grid_imageProgressBar"
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_height="50dp" />
+        android:layout_gravity="center"
+        android:visibility="visible"
+        app:indicatorColor="@color/SlateBlue"
+        app:indicatorName="BallScaleMultipleIndicator" />
 
 
 </RelativeLayout>
