--- a/app/src/main/res/layout/user_profil_frag.xml
+++ b/app/src/main/res/layout/user_profil_frag.xml
@@ -74,18 +74,21 @@
                         app:civ_border_color="@color/mycolor2"
                         app:civ_border_width="5dp" />
 
-                    <ProgressBar
+
+                    <com.wang.avi.AVLoadingIndicatorView
                         android:id="@+id/profilimageProgress"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginTop="68dp"
                         android:visibility="visible"
+                        android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
                         android:layout_centerInParent="true"
+                        android:layout_marginTop="68dp"
+                        app:indicatorColor="@color/SlateBlue"
+                        android:layout_gravity="center"
+                        app:indicatorName="LineScaleIndicator">
 
-
-                        />
+                    </com.wang.avi.AVLoadingIndicatorView>
 
                     <!--
                     <RelativeLayout
@@ -214,15 +217,16 @@
             app:layout_anchorGravity="bottom|right|end"
             app:pressedTranslationZ="12dp" />
 
-        <ProgressBar
+        <com.wang.avi.AVLoadingIndicatorView
             android:id="@+id/profileProgress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:visibility="visible"
+            app:indicatorColor="@color/SlateBlue"
+            android:layout_gravity="center"
+            app:indicatorName="LineScalePulseOutIndicator">
 
-
-            />
+        </com.wang.avi.AVLoadingIndicatorView>
     </android.support.design.widget.CoordinatorLayout>
 
     <LinearLayout
