--- a/app/src/main/res/layout/yeteneklist_row.xml
+++ b/app/src/main/res/layout/yeteneklist_row.xml
@@ -1,53 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:weightSum="6"
-    android:background="@drawable/roundedbutton2"
-    android:orientation="horizontal"
-    android:paddingBottom="10dp"
-    android:paddingEnd="6dp"
-    android:paddingStart="10dp"
-    android:paddingTop="10dp">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/yetenek"
-        android:layout_width="0dp"
+    <RelativeLayout
+        android:id="@+id/yetenekBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/MediumSlateBlue">
+
+        <ImageView
+            android:id="@+id/delete_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:tint="@color/white"
+            android:src="@drawable/ic_delete_sweep_black_24dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/delete_icon"
+            android:text="Delete"
+            android:textColor="#fff"
+            android:textSize="13dp" />
+
+    </RelativeLayout>
+
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/yetenekForeground"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="7dp"
-        android:layout_weight="2"
-        android:text="YETENEKİSMİ"
-        android:textSize="15dp" />
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
+        android:paddingEnd="6dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:weightSum="6">
+
+        <TextView
+            android:id="@+id/yetenek"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="7dp"
+            android:layout_weight="2"
+            android:text="YETENEKİSMİ"
+            android:textSize="15dp" />
 
 
-    <RatingBar
-        android:id="@+id/yetenekRating"
-        style="?android:attr/ratingBarStyleIndicator"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="3.5"
-        android:gravity="center_vertical"
-        android:layout_gravity="center_vertical"
-        android:clickable="false"
-        android:isIndicator="true"
-        android:scaleX="0.5"
-        android:scaleY="0.5"
-        android:numStars="5"
-        android:theme="@style/RatingBar"
+        <RatingBar
+            android:id="@+id/yetenekRating"
+            style="?android:attr/ratingBarStyleIndicator"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="3.5"
+            android:clickable="false"
+            android:gravity="center_vertical"
+            android:isIndicator="true"
+            android:numStars="5"
+            android:scaleX="0.5"
+            android:scaleY="0.5"
+            android:theme="@style/RatingBar"
 
-        />
+            />
 
-    <ImageView
-        android:id="@+id/editYetenekrow"
-        android:layout_width="0dp"
-        android:layout_height="20dp"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="0.5"
-        android:src="@drawable/pencil"
-        android:tint="@color/SlateBlue"
+        <ImageView
+            android:id="@+id/editYetenekrow"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.5"
+            android:src="@drawable/pencil"
+            android:tint="@color/SlateBlue"
 
-        />
+            />
 
 
-</LinearLayout>
+    </LinearLayout>
+</FrameLayout>
